# rusty-iter-cpp

./: CMakeLists.txt  LICENSE.txt  README.md
docs/: README.md
include/: rusty-iter.hpp
src/: CMakeLists.txt
src/test/: main.cpp
